<resources>
    <string name="google_maps_api_key"></string>
    <string name="app_name">MovEmt</string>
    <string name="appName">MOVEMT</string>
    <string name="stop">Tiempos de espera</string>
    <string name="capture_bus_line">Captura bus</string>
    <string name="path">Selecciona ruta</string>
    <string name="buses">Localiza autobuses</string>
    <string name="voice">Comando por voz</string>
    <string name="favStops">Paradas favoritas</string>
    <string name="title_activity_speech_view">SpeechViewActivity</string>
    <string name="title_activity_camera_to_text">CameraToTextActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="c_digo_de_parada">Código de parada</string>
    <string name="introducir_parada">Introduce una parada</string>
    <string name="introducir_linea">Introduce línea de bus</string>
    <string name="buscar_parada">Buscar Parada</string>
    <string name="image">IMAGE</string>
    <string name="introduce_el_c_digo_de_parada_o_toma_una_foto_con_la_c_mara_para_obtener_informaci_n">Introduce el código de parada o toma una foto con la cámara para obtener información</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="azure_subscription_key">bf017d6bf0194f4687b648315e9d1cda</string>
    <string name="azure_endpoint">https://westeurope.api.cognitive.microsoft.com/</string>
    <string name="recognize_stop_error">No se ha podido reconocer la parada</string>
    <string name="recognize_bus_line_error">No se ha podido reconocer la línea de bus</string>
    <string name="recognize_route_error">No se encontraron rutas</string>
    <string name="loading_text">Cargando...</string>
    <string name="bus_line">Línea</string>
    <string name="next_bus">Próximo</string>
    <string name="route_title">Información de la ruta</string>
    <string name="route_selection_title">Selecciona una ruta</string>
    <string name="speech_title">Comandos por voz</string>
    <string name="bus_stop_title">Próximos autobuses</string>
    <string name="stop_info">Información de parada</string>
    <string name="toma_una_foto_de_la_linea">Tome una foto al bus, y mire su línea</string>
    <string name="linea_bus">línea de bus</string>
</resources>
