<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:backgroundTint="@color/colorPrimaryDark"
    tools:context=".parada_texto_imagen">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimary"
        android:clickable="true"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/colorCardBackground"
        app:srcCompat="?attr/homeAsUpIndicator"
        android:focusable="true" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/introducir_parada"
        android:textColor="@color/colorCardBackground"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toEndOf="@+id/floatingActionButton3"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/stopCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/c_digo_de_parada"
        android:textColor="@color/colorCardBackground"
        android:textColorHint="@color/colorCardBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="299dp"
        android:layout_height="68dp"
        android:text="@string/introduce_el_c_digo_de_parada_o_toma_una_foto_con_la_c_mara_para_obtener_informaci_n"
        android:textColor="@color/colorCardBackground"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/stopImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.581"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stopCode"
        app:layout_constraintVertical_bias="0.494" />

    <ImageView
            android:id="@+id/stopImage"
            android:layout_width="245dp"
            android:layout_height="312dp"
            android:background="@color/colorCardBackground"
            android:contentDescription="@string/appName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.64"
            app:srcCompat="@android:drawable/ic_menu_camera" android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"/>

    <Button
            android:id="@+id/stopSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorCardBackground"
            android:text="Buscar"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stopImage"
            app:layout_constraintVertical_bias="0.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>