<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".activity.MainActivity">

    <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:cardBackgroundColor="@color/colorCardBackground"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
                android:layout_width="4dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:orientation="horizontal"
                android:weightSum="10">

            <Button
                    android:id="@+id/Back"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/deshacer"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="9"
                    android:autoSizeTextType="uniform"
                    android:gravity="center"
                    android:text="@string/introducir_linea"
                    android:textColor="@color/colorPrimary"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="50dp"
            android:text="@string/toma_una_foto_de_la_linea"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/capturePhotoButton"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            tools:layout_editor_absoluteX="30dp"/>

    <Button
            android:id="@+id/capturePhotoButton"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/ic_camera_alt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1"
            app:layout_constraintBottom_toTopOf="@+id/lineCodeText" android:layout_marginBottom="32dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp" android:id="@+id/lineCodeText"
            app:layout_constraintBottom_toTopOf="@+id/audioButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="32dp"
            android:hint="@string/linea_bus" android:textSize="18sp" android:textAlignment="center"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp" android:id="@+id/audioButton"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:background="@drawable/ic_altavoz_foreground"/>


</androidx.constraintlayout.widget.ConstraintLayout>